# cardano-smart-contract

./: .gitignore  README.md  cabal.project
dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  plutus-nft-0.1.0.0-inplace.conf
dist-newstyle/src/: Win32-net_-5b9448ed2f179086.cache  cardano-b_-c8db9876882556ed.cache  cardano-c_-253fd88117badd8f.cache  cardano-l_-48e3a74bf8b61f34.cache  cardano-n_-156536db9a177fb0.cache  cardano-p_-cae013aee062332a.cache  flat-9eba9ae2d4d970a.cache  goblins-67efee8d68d79164.cache  hedgehog-_-586c3da22a5ce29b.cache  iohk-moni_-1defcf7452717dc5.cache  ouroboros_-e51b1e265e7bb521.cache  plutus-5e27fa0483bd0166.cache
oracle/: CHANGELOG.md  oracle.cabal
oracle/app/: Main.hs
oracle/plutus-script/: oracle.plutus
oracle/src/: Oracle.hs
plutus-nft/: CHANGELOG.md  plutus-nft.cabal
plutus-nft/app/: plutus-nft.hs
plutus-nft/plutus-script/: mint-nft-plicy.plutus
plutus-nft/src/: PlutusNft.hs
scripts/: build_nft_transaction.sh  build_oracle_nft.sh  singn_nft.sh
