cabal-version:      2.4
name:               plutus-nft
version:            0.1.0.0

description:  Example of nft script on plutus
author:       Ahmad Howaiji


Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      PlutusNft

  build-depends:        bytestring
                      , hex
                      , cardano-api
                      , flat
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable plutus-nft
    import:           base, project-config
    main-is:          plutus-nft.hs
    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-T"
  
    build-depends:    cardano-api
                    , cardano-ledger-alonzo
                    , plutus-ledger
                    , plutus-ledger-api
                    , bytestring
                    , plutus-nft
